tests/typing/fail/bad-match3.t20
;; Patterns must be structural compatible in a match expression.

(: test Int)
(define test
  (match (, 1 2 3 4)
    [(, a b c d) 1]
    [(, _ _ _ _) 2]
    [(, a b c)   3]))
